Fix placement of labels when they are wrapped

--- a/ui/components/Label.scss
+++ b/ui/components/Label.scss
@@ -11,7 +11,9 @@
     font-size: .6rem;
   }
 
-  & + & {
-    margin-left: $spacer / 4;
+  margin-right: $spacer / 4;
+
+  &:last-child {
+    margin-right: 0;
   }
 }
